# it-documentary-system-validator

./: .pre-commit-config.yaml  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: bot.yaml  pytest.yaml
fcbg_ruff/: __init__.py  _parser.py  conftest.py  validator2.py
fcbg_ruff/check/: __init__.py  _regex.py  config.py  validator.py
fcbg_ruff/check/tests/: test_parser.py  test_regex.py  test_validator.py
fcbg_ruff/commands/: check.py  main.py
fcbg_ruff/commands/tests/: test_check.py
fcbg_ruff/tests/: _test_validator.py  _test_validator2.py  test_validator.py
fcbg_ruff/utils/: _docs.py  config.py
fcbg_ruff/utils/tests/: test_checks.py  test_config.py  test_docs.py  test_imports.py  test_logs.py  test_path.py
fcbg_ruff/validator/: _regex.py
fcbg_ruff/validator/tests/: test_parser.py  test_regex.py
itvalidator/: _parser.py  config.py  config2.py  conftest.py  validator.py  validator2.py  validator3.py
itvalidator/tests/: test_parser.py  test_validator.py  test_validator2.py
itvalidator/utils/: _docs.py  _path.py  config.py
itvalidator/utils/tests/: test_path.py
itvalidator/validator/: _parser.py  _regex.py  config.py
itvalidator/validator/tests/: test_parser.py  test_regex.py
